# playground-series-s6e7

./: .gitignore  Sweetviz.ipynb  kaggle.ipynb  kaggle_claude.ipynb  main.py  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
src/: train_report.html
