[project]
name = "playground-series-s6e7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.10",
    "ipykernel>=7.3.0",
    "lightgbm>=4.6.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "sweetviz>=2.3.3",
    "xgboost>=3.3.0",
]
